k8s-resources/blue-green-demo/rollout-bg-demo.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bluegreen-demo
  name: bluegreen-demo
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: bluegreen-demo
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bluegreen-demo
  name: bluegreen-demo-preview
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: bluegreen-demo
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  labels:
    app: bluegreen-demo
  name: bluegreen-demo
spec:
  replicas: 3
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: bluegreen-demo
  strategy:
    blueGreen:
      activeService: bluegreen-demo
      autoPromotionEnabled: false
      previewService: bluegreen-demo-preview
  template:
    metadata:
      labels:
        app: bluegreen-demo
    spec:
      containers:
      - image: argoproj/rollouts-demo:blue
        imagePullPolicy: Always
        name: bluegreen-demo
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 5m
            memory: 32Mi
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/app-root: /
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
  name: bluegreen-demo
spec:
  rules:
  - host: blue-green.dev.argoproj.io
    http:
      paths:
      - backend:
          serviceName: bluegreen-demo
          servicePort: 80
        path: /
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/app-root: /
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
  name: bluegreen-demo-preview
spec:
  rules:
  - host: blue-green-preview.dev.argoproj.io
    http:
      paths:
      - backend:
          serviceName: bluegreen-demo-preview
          servicePort: 80
        path: /
